@@ -1,3 +1,8 @@
+2000-12-20  Hideyuki SHIRAI  <shirai@quickhack.net>
+
+	* emacs/mhc-ps.el (mhc-ps/string): Calculate '/startday' from
+	"1/1/2032" instead of "1/1/2000".
+
 2000-12-19  Kazuhiro NISHIYAMA <zn@mbf.nifty.com> / nom@quickhack.net
 
 	* mhc-make.rb: filter -> collect.
